--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,5 +1,4 @@
-    <div class="header">
-        <div class="sidenav">
+<div class="sidenav">
             <a href="/dashboard" class="logo">
                 <img src="../../../assets/images/logo.png" class="logo-img">
                 <img src="../../../assets/images/logo.png" class="logo-icon">
@@ -8,10 +7,19 @@
                 <li><a href="#"><fa-icon [icon]="faHomeUser"></fa-icon><p>Dashboard</p></a></li>
                 <li><a href="#"><fa-icon [icon]="faUsers"></fa-icon><p>Staff</p></a></li>
                 <li><a href="#"><fa-icon [icon]="faUserCheck"></fa-icon><p>Guests</p></a></li>
-                <li><a href="#"><fa-icon [icon]="faDoorClosed"></fa-icon><p>Rooms</p></a></li>
+                <li><a href="/room"><fa-icon [icon]="faDoorClosed"></fa-icon><p>Rooms</p></a></li>
                 <li><a href="#"><fa-icon [icon]="faBed"></fa-icon><p>Reservations</p></a></li>
                 <li><a href="#"><fa-icon [icon]="faDollarSign"></fa-icon><p>Billing</p></a></li>
                 <div class="active"></div>
             </ul>
         </div>
-    </div>
+        <div class="top-nav">
+            <nav>
+            <ul>
+                <li><a href="#"><fa-icon [icon]="faGear"></fa-icon></a></li>
+            </ul>
+            </nav>
+        </div>
+        <div class="container">
+            <app-room></app-room>
+        </div>
