--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,6 +10,6 @@
   </nav>
   <div class="content">
     <h1>Il Regalo</h1>
-    <a href="\dashboard">Login</a>
+    <a href="\metrics">Login</a>
   </div>
 </div>
